labour/test/invalid/invalid_start_hold_value.labour
bouldering_wall "StartValueWall": {
  routes [
    bouldering_route "third hand": {
      grade: "5A",
      grid_base_point: { x: 0, y: 0 },
      holds ["0001", "0002"]
    }
  ],
  volumes [
    circle: {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001": {
          pos: { x: 0, y: 0 },
          shape: "1",
          colours [ red ],
          start_hold: 3
        },
        hold "0002": {
          pos: { x: 5, y: 5 },
          shape: "1",
          colours [ red ]
        }
      ]
    }
  ]
}
